fix bug ky anh otp + sua dashboarf

--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -86,6 +86,7 @@
               filterBy="name"
               (onChange)="search()"
               ></p-dropdown>
+              <!-- <p-treeSelect [(ngModel)]="selectedNode" [options]="nodes" placeholder="Select Item" [filter]="true" filterBy="name" (onChange)="search()"></p-treeSelect> -->
           </div>
         </div>
         <div class="row">
