--- a/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
@@ -10,6 +10,7 @@
 
     <div class="name-item">
       <input class="input-otp" id="otp" autocomplete="off" formControlName="otp" placeholder="Nhập OTP"
+      maxlength="6"
       oninput="this.value = this.value.replace(/[^0-9]/g ,'', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
       >
       <div *ngIf="submitted && f.otp.errors" class="invalid">
