--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -69,14 +69,14 @@
             <div class="col-md-6">
                 <div class="label_item">{{'Số lượng hợp đồng đã mua' | translate }}</div>
                 <div>
-                    <div [innerHTML]="fax" class="input_text"></div>
+                    <div [innerHTML]="numContractBuy" class="input_text"></div>
                 </div>
             </div>
         
             <div class="col-md-6">
                 <div class="label_item">{{'Số lượng hợp đồng đã tạo' | translate }}</div>
                 <div>
-                    <div [innerHTML]="fax" class="input_text"></div>
+                    <div [innerHTML]="numContractCreate" class="input_text"></div>
                 </div>
             </div>
         </div>
