--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
@@ -28,7 +28,7 @@
         </div>
         <hr>
 
-        <div class="location-change" [ngStyle]="changeDisplay()">
+        <div class="location-change">
             <div class="sample-contract__information--user-sign">
                 <label class="label">THUỘC TÍNH</label>
                 <div class="name-text" *ngIf="isEnableText">
