add taxcode step 2 and validate in admin

--- a/src/app/admin/admin-main/admin-unit/admin-add-unit/admin-add-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-unit/admin-add-unit.component.html
@@ -56,7 +56,7 @@
             {{ "Mã số thuế không được để trống" | translate }}
           </div>
           <div *ngIf="f.tax_code.errors.pattern">
-            {{ "Mã số thuế không được chứa ký tự đặc biệt" | translate }}
+            {{ "Mã số thuế không đúng định dạng" | translate }}
           </div>
         </div>
       </div>
