--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.scss
@@ -157,7 +157,7 @@
     //  height: calc(50vh - 100px);
     //}
 
-    @media screen and (min-height: 781px) {
+    @media screen and (max-height: 781px) {
       .location-change {
         overflow: auto;
         height: 225px;
