--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
@@ -152,7 +152,7 @@
       }
     }
 
-    @media screen and (min-height: 781px) {
+    @media screen and (max-height: 781px) {
       .location-change {
         overflow: auto;
         height: 225px
