--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -153,7 +153,7 @@
       }
     }
 
-    @media screen and (min-height: 781px) {
+    @media screen and (max-height: 781px) {
       .location-change {
         height: 210px;
         overflow: auto;
