--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -44,6 +44,7 @@
         </app-confirm-infor-contract>
     </ng-container>
 
+    <!--Hợp đồng đơn lẻ theo mẫu-->
     <ng-container *ngIf="type == 2 && (isQLHD_14 || this.action == 'edit')">
         <app-infor-contract-form #infoContractForm *ngIf="stepForm == 'infor-contract-form'" [datasForm]="datasForm" [stepForm]="stepForm"
             [save_draft_infor_form]="shareData" (stepChangeInfoContractForm)="getStep($event)"></app-infor-contract-form>
