--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -247,7 +247,7 @@
                     placeholder="{{ 'choose' | translate }}"
                     [settings]="dropdownSignTypeSettings"
                     [data]="isListSignNotPerson"
-                    (onSelect)="onItemSelectOrg($event)"
+                    (onSelect)="onItemSelect($event)"
                     (onDeSelect)="deSelectOrg($event)"
                     (ngModelChange)="selectWithOtp($event, d, true)"
                   >
